Customize form for new Task
1. Add boostrap Librairy (css ans js)
2. Split form to add more spécificity in each form item
3. For exemple add class in formType and in formView

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,10 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
+#    Charger le formTheme boostrap 3, decommenter les 2 lignes ci dessous
+#    form_themes:
+#        - 'bootstrap_3_horizontal_layout.html.twig'
+
 # Doctrine Configuration
 doctrine:
     dbal:
