--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -22,12 +22,17 @@ services:
         # but if a service is unused, it's removed anyway
         exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
 
+
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
     AppBundle\Controller\:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
+
+    AppBundle\Services\FileUploader:
+        arguments:
+            $targetDir: '%pictures_directory%'
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
